Fix mobile about page image rendering too close to title bar

--- a/_includes/lite.css
+++ b/_includes/lite.css
@@ -396,6 +396,9 @@ and (max-width : 740px) {
   h1 {
     padding-top: 10px;
   }
+  .two-column {
+    padding-top: 30px;
+  }
 }
 
 /* rules for screens over 740 pixels wide */
